TST-375 Bug 891
Bring down the error messages being displayed
so it's not too close to the checkout button

--- a/assets/scss/custom/layout/_personal-info.scss
+++ b/assets/scss/custom/layout/_personal-info.scss
@@ -305,6 +305,10 @@
         padding: .25rem $SPACING_2;
     }
 
+    #formErrorMessages {
+        margin-top: 3rem;
+    }
+
     @media (max-width: 768px) {
         &__mobile-100 {
             width: 100% !important;
